<resources>
    <string name="app_name">TutorDonk</string>
    <string name="welcome_message">Welcome to TutorDonk</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="role_prompt">Select Role</string>
    <string-array name="roles_array">
        <item>Siswa</item>
        <item>Pengajar</item>
    </string-array>
    <string name="logo_description">App Logo</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="parent_s_phone_number">Parent\'s Phone Number</string>
    <string name="parent_s_name">Parent\'s Name</string>
    <string name="education_level">Education Level</string>
    <string name="subjects_comma_separated">Subjects (comma-separated)</string>
    <string name="certifications_achievements_comma_separated">Certifications/Achievements (comma-separated)</string>
    <string name="kelas">Class</string>
    <string name="dropdown_icon">Dropdown Icon</string>


    <string name="cd_logo">Logo</string>
    <string name="cd_active_indicator">icon of active indicator</string>
    <string name="onboarding_title_skip">Skip</string>
    <string name="cd_img_onboarding">Image of Onboarding Step</string>
    <string name="onboarding_title_certification_and_badges">Certification and Badges</string>
    <string name="onboarding_subtitle_certification_and_badges">Earn a certificate after completion of every course</string>
    <string name="cd_button_next">Button Next</string>
    <string name="login_title_login">Login</string>
    <string name="login_hint_email">demo@gmail.com</string>
    <string name="login_hint_password">********</string>
    <string name="login_title_password">Password</string>
    <string name="login_title_forgot_password">Forgot Password ?</string>
    <string name="register_title_sign_up">Sign Up</string>
    <string name="dashboard_greeting">Helo, %s</string>
    <string name="cd_notification">icon of notification</string>
    <string name="home_user_title_booking_tutor">Booking Tutor</string>
    <string name="home_user_title_history_study">Riwayat Belajar</string>
    <string name="home_user_title_find_tutor">Cari Tutor</string>
    <string name="home_user_forum_tutor">Forum Belajar</string>
    <string name="desc_spinner_icon">Icon of Spinner</string>
    <string name="booking_tutor_title_select_sub_study">Apakah kamu mau memilih sub mata pelajaran tertentu?</string>
    <string name="booking_tutor_btn_booking_now">Booking Now</string>
    <string name="cd_comments">icon of comments</string>
    <string name="cd_sort">icon of sort</string>
    <string name="detail_forum_title_creator_comment">Pembuat Komentar</string>
    <string name="user_edit_profile_btn_update">Update</string>
    <string name="popup_desc_icon_close">Icon popup close</string>
    <string name="popup_title_comments">Berikan Komentarmu</string>
    <string name="popup_btn_send">Kirim</string>
    <string name="student_booking_rating_tutor">Rating Tutor</string>
    <string name="student_booking_report_tutor">Lapor Tutor</string>
    <string name="student_booking_chat">Chat Via Whatsapp</string>
    <string name="cd_stars">icon of stars</string>
    <string name="popup_hint_desc">Deskripsi</string>
    <string name="popup_hint_reason">Alasan</string>
    <string name="teacher_user_title_history_study">Riwayat mengajar</string>
    <string name="teacher_user_title_tutor_management">Tutor management</string>
    <string name="tutor_management_btn_reject">Reject</string>
    <string name="tutor_management_btn_accept">Accept</string>
    <string name="hint_date">MM/DD/YY</string>
    <string name="hint_certificate">Nama Sertifikat</string>
    <string name="hint_certificate_link">Link Sertifikat</string>
    <string name="btn_add">Tambah</string>
    <string name="title_name">Name</string>
    <string name="title_price">Price</string>
    <string name="title_certificate">Certificate</string>
    <string name="btn_book">Book Now</string>
    <string name="title_forum">Forum</string>
    <string name="title_email">Email</string>
    <string name="title_gender">Jenis Kelamin</string>
    <string name="desc_create_forum">Create Forum</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>

    <string-array name="list_study_array">
        <item>Kalkulus</item>
        <item>B Inggris</item>
        <item>Algoritma Dasar</item>
    </string-array>

    <string-array name="list_sub_study_kalkulus_array">
        <item>Sub Kalkulus</item>
    </string-array>

    <string-array name="list_sub_study_algorithm_array">
        <item>Sub Algoritma Dasar</item>
    </string-array>

    <string-array name="list_sub_study_b_english_array">
        <item>Sub B Inggris</item>
    </string-array>

    <string-array name="list_tutor_array">
        <item>Prof. Hamka</item>
        <item>Prof. Yusuf</item>
        <item>Prof. Rocky</item>
    </string-array>

    <string-array name="list_violation_array">
        <item>Tidak Kompeten</item>
        <item>Sering Tidak Hadir</item>
        <item>Sering Telat</item>
    </string-array>

    <string-array name="list_sort">
        <item>Popularitas</item>
        <item>Like</item>
        <item>Comment</item>
    </string-array>

    <string-array name="list_sort_history">
        <item>Matkul</item>
        <item>Status</item>
    </string-array>

    <string-array name="list_gender">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>