<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white">

    <ImageView
        android:id="@+id/iv_indicator_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cd_active_indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_indicator_active_one" />

    <TextView
        android:id="@+id/tv_skip"
        style="@style/TheJakartaSans.Regular.12sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/onboarding_title_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:contentDescription="@string/cd_img_onboarding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_certification_badges" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TheJakartaSans.Bold.28sp"
        android:layout_marginTop="24dp"
        android:text="@string/onboarding_title_certification_and_badges"
        app:layout_constraintEnd_toEndOf="@id/iv_onboarding"
        app:layout_constraintStart_toStartOf="@id/iv_onboarding"
        app:layout_constraintTop_toBottomOf="@id/iv_onboarding" />

    <TextView
        android:id="@+id/tv_subtitle"
        style="@style/TheJakartaSans.Light.16sp"
        android:layout_width="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_subtitle_certification_and_badges"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />
</androidx.constraintlayout.widget.ConstraintLayout>