<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_yellow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Role Selection Spinner -->
            <Spinner
                android:id="@+id/spinner_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_spinner_with_arrow"
                android:entries="@array/roles_array"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:popupBackground="@color/white"
                android:spinnerMode="dropdown" />

            <!-- Common Fields -->
            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/address" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/phone_number" />

            <!-- Student Specific Fields -->
            <LinearLayout
                android:id="@+id/student_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_parent_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/parent_s_phone_number" />

                <EditText
                    android:id="@+id/et_parent_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/parent_s_name" />

                <EditText
                    android:id="@+id/et_education_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/education_level" />

                <EditText
                    android:id="@+id/et_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/kelas" />
            </LinearLayout>

            <!-- Teacher Specific Fields -->
            <LinearLayout
                android:id="@+id/teacher_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/et_subjects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/subjects_comma_separated" />

                <EditText
                    android:id="@+id/et_certifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/certifications_achievements_comma_separated" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
