<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/bg_brown"
    android:padding="16dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/popup_desc_icon_close"
            android:src="@drawable/ic_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/iv_close">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_title"
                style="@style/CustomEditText"
                android:layout_height="match_parent"
                android:hint="@string/hint_title"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_content"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/til_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_content"
                style="@style/CustomEditText"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/hint_content"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/green_light"
            android:text="@string/popup_btn_send"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>