<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/bg_popup_grey"
    android:padding="16dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/popup_desc_icon_close"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            style="@style/TheJakartaSans.SemiBold.18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popup_title_comments" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_comments"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_comments"
                style="@style/CustomEditText"
                android:layout_height="match_parent"
                android:gravity="start"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/green_light"
            android:text="@string/popup_btn_send"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.cardview.widget.CardView>